--- a/angular.json
+++ b/angular.json
@@ -44,6 +44,7 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
+              "baseHref": "https://jsaavedrax.github.io/star-wars-ic/",
               "budgets": [
                 {
                   "type": "initial",
