--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 lebguage: node_js
 mode_js:
   -  "12.16.3"
+services:
+  - docker
 cache:
   directories:
     - ./node_modules
@@ -9,6 +11,7 @@ install:
   - npm install
 before_script:
 script:
+  - npm run-script test
   - npm run-script build
 after_success:
 after_failure:
