--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,14 @@ cache:
   directories:
     - ./node_modules
 before_install:
+  - docker ps -a
+  - docker run -d -p 8085:80 starwars:latest
+  - docker ps -a
 install:
   - npm install
 before_script:
 script:
-  - npm run-script test
+  # - npm run-script test
   - npm run-script build
 after_success:
 after_failure:
