--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ cache:
     - ./node_modules
 before_install:
   - docker ps -a
+  - docker images
   # - docker run -d -p 8085:80 starwars:latest
   # - docker ps -a
 install:
