Cambios IC Travis Docker

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ cache:
 before_install:
   - docker ps -a
   - docker images
+  - docker build -t starwars .
   # - docker run -d -p 8085:80 starwars:latest
   # - docker ps -a
 install:
