--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ cache:
   directories:
     - ./node_modules
 before_install:
-  - docker ps -a
-  - docker images
-  - docker build -t starwars .
-  # - docker run -d -p 8085:80 starwars:latest
-  # - docker ps -a
+    - docker ps -a
+    - docker images
+    - docker build -t starwars .
+    - docker run -d -p 8085:80 starwars:latest
+    - docker ps -a
 install:
   - npm install
 before_script:
