--- a/.travis.yml
+++ b/.travis.yml
@@ -7,18 +7,17 @@ cache:
   directories:
     - ./node_modules
 before_install:
-    - docker ps -a
-    - docker images
-  install:
-  # - npm install
   - docker build -t starwars .
   - docker run -d -p 8085:80 starwars:latest
+  - docker ps -a
+  - docker images
+  install:
+  - npm install
 before_script:
 script:
   # - npm run-script test
   - npm run-script build
 after_success:
-  - docker images
 after_failure:
 after_script:
 before_deploy:
