--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ cache:
   directories:
     - ./node_modules
 before_install:
-  - docker build -t starwars .
+ # - docker build -t starwars .
   - docker run -d -p 8085:80 starwars:latest
   - docker ps -a
   - docker images
