--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ cache:
 directories:
   - ./node_modules
 before_install:
+  - docker build -t starwars .
+  - docker run -d -p 8085:80 starwars:latest
+  - docker ps -a
+  - docker images ls
 install:
   - npm install
 before_script:
