--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ directories:
 before_install:
 install:
   #- npm install
+  - npm run-script test
   - docker build -t starwars .
   - docker run -d -p 127.0.0.1:8085:80 starwars:latest
 before_script:
@@ -18,6 +19,7 @@ after_success:
 after_failure:
 after_script:
 before_deploy:
+#Esto me funciona correctamente en Github Pages
 #deploy:
 #provider: pages
 #skip_cleanup: true
