--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 lebguage: node_js
 mode_js:
   - "12.16.3"
+addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
 cache:
 directories:
   - ./node_modules
@@ -12,7 +18,7 @@ install:
 before_script:
 script:
   - npm run-script build
-  - npm run-script test --watch=false --browsers=ChromeHeadlessNoSandbox
+  - npm run-script test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
   #- docker ps -a
   #- docker images
 after_success:
@@ -26,5 +32,3 @@ github_token: $GITHUB_TOKEN
 local_dir: dist/starwars
 on:
 branch: master
-addons:
-  chrome: stable
