--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
 before_script:
 script:
   - npm run-script build
-  - npm run-script test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+  - npm run-script test --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
   #- docker ps -a
   #- docker images
 after_success:
