Prueba deploy docker sin pruebas unitarias

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,9 @@ cache:
 before_install:
 install:
   - npm install
+  - docker pull nginx:alpine
   #- docker build -t starwars .
-  #- docker run -d -p 127.0.0.1:8085:80 starwars:latest
+  - docker run -d -p 172.22.6.21:8085:80 starwars:latest
 before_script:
 script:
   - npm run-script build
