--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 install:
   - npm install
   - docker pull nginx:alpine
-  #- docker build -t starwars .
+  - docker build -t starwars .
   - docker run -d -p 172.22.6.21:8085:80 starwars:latest
 before_script:
 script:
