Prueba, cambios docker file y travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 install:
   - npm install
   - docker build -t starwars .
-  - docker pull nginx:alpine
+  - docker pull nginx
   - docker run -d -p 127.0.0.1:8085:80 starwars:latest
 before_script:
 script:
