--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,12 @@ before_install:
 install:
   - npm install
   - docker build -t starwars .
-  - docker pull nginx
+  - docker pull nginx:alpine
   - docker run -d -p 127.0.0.1:8085:80 starwars:latest
 before_script:
 script:
   - npm run-script build
-  #- npm run-script test --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+  - npm run-script test --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
   - docker ps -a
   - docker images
 after_success:
