--- a/.travis.yml
+++ b/.travis.yml
@@ -11,15 +11,15 @@ cache:
 before_install:
 install:
   - npm install
-  - docker build -t starwars .
-  - docker pull nginx:alpine
-  - docker run -d -p 127.0.0.1:8085:80 starwars:latest
+  #- docker build -t starwars .
+  #- docker pull nginx:alpine
+  #- docker run -d -p 127.0.0.1:8085:80 starwars:latest
 before_script:
 script:
   - npm run-script build
   - npm run-script test --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
-  - docker ps -a
-  - docker images
+  #- docker ps -a
+  #- docker images
 after_success:
 after_failure:
 after_script:
